tests/parse-errors/issue034-1.zir
fun comp f(a : int, b : int) {
  return a;
}

let comp main = read[int] >>> f(1) >>> write[int]
